# agent-tool-router

./: .gitignore  LICENSE  README.md  pyproject.toml
agent_tool_router/: __init__.py  __main__.py  router.py  train.py  train_descriptions.py
datasets/eval_fr/: README.md
examples/research_helper/: README.md  agent.py  seed_examples.py  tools.py
router/api/: Dockerfile  README.md  main.py
router/eval/: baseline_cross_corpus.py  baseline_cross_corpus_clean.py  baseline_loso.py  baseline_loso_descriptions.py  baseline_loso_descriptions_biencoder.py  baseline_loso_descriptions_hybrid.py  baseline_loso_descriptions_rrf.py  baseline_tfidf.py  build_markov2_table.py  build_markov_table.py  build_next_tool_cache.py  build_next_tool_dataset.py  eval_baseline_v1_desc.py  eval_fr_encoder.py  eval_fr_pretrained.py  eval_next_tool_baseline.py  eval_next_tool_markov.py  eval_next_tool_markov2.py  eval_next_tool_mlp.py  eval_next_tool_widen.py  eval_v1_desc_encoder.py  eval_v1_desc_loso_calibration.py  eval_v1_desc_loso_calibration_sweep.py  eval_v1_desc_loso_hybrid.py  finetune_retriever_next_tool.py  fr_eval_queries.json  leak_filter.py  measure_latency.py  train_next_tool_mlp.py
router/index/: aggregate.py  build_tool_descriptions.py  crawl_mcp.py  load_hermes.py  load_osworld.py  load_swebench.py  load_taubench.py  load_toolace.py  trace_schema.py
router/sdk/typescript/: README.md  package-lock.json  package.json  (+1 more)
scripts/: make_dataset.sh  push_dataset.py  push_pretrained.py  push_space.py
spaces/demo/: README.md  app.py  requirements.txt
tests/: test_router.py
(+1 files in other folders)
