[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-tool-router"
version = "0.1.0"
description = "Pick the right tools for an agent task. Boring baseline. Open dataset."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Dalek", email = "dalekkskaro@users.noreply.github.com" }]
keywords = ["agents", "llm", "tool-use", "function-calling", "routing", "mcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "scikit-learn>=1.3",
    "scipy>=1.10",
    "numpy>=1.24",
    "joblib>=1.3",
]

[project.optional-dependencies]
dev = ["datasets>=2.16"]
encoder = ["sentence-transformers>=2.2"]

[project.scripts]
agent-tool-router = "agent_tool_router.__main__:main"

[project.urls]
Homepage = "https://github.com/dalek-ai/agent-tool-router"
Repository = "https://github.com/dalek-ai/agent-tool-router"

[tool.setuptools.packages.find]
include = ["agent_tool_router*"]
exclude = ["data*", "models*", "router*", "tests*"]
